Minor changes so that this will compile on a mac

--- a/config.cfg
+++ b/config.cfg
@@ -3,29 +3,31 @@ kafka-stream:
 
     Source :
         {
-            brokers                  = "localhost:9093"
-            topic                    = "test.in"
+            brokers                  = "localhost:9092"
+            topic                    = "test"
             group-id                 = "program_dev"
             debug                    = false
-            security-protocol        = "SSL"
-            ssl-ca-location          = "/etc/pki/my-CA.pem"
-            ssl-certificate-location = "/etc/pki/my-CRT.crt"
-            ssl-key-location         = "/etc/pki/my-KEY.key"
-            ssl-key-password         = "my-password"
+            security-protocol        = "PLAINTEXT"
+            #security-protocol        = "SSL"
+            #ssl-ca-location          = "/etc/pki/my-CA.pem"
+            #ssl-certificate-location = "/etc/pki/my-CRT.crt"
+            #ssl-key-location         = "/etc/pki/my-KEY.key"
+            #ssl-key-password         = "my-password"
         }
 
     Sink :
         {
-            brokers                  = "localhost:9093"
+            brokers                  = "localhost:9092"
             topic                    = "test.out"
             linger-ms                = "1000"
             supress-output           = false
             debug                    = false
-            security-protocol        = "SSL"
-            ssl-ca-location          = "/etc/pki/my-CA.pem"
-            ssl-certificate-location = "/etc/pki/my-CRT.crt"
-            ssl-key-location         = "/etc/pki/my-KEY.key"
-            ssl-key-password         = "my-password"
+            security-protocol        = "PLAINTEXT"
+            #security-protocol        = "SSL"
+            #ssl-ca-location          = "/etc/pki/my-CA.pem"
+            #ssl-certificate-location = "/etc/pki/my-CRT.crt"
+            #ssl-key-location         = "/etc/pki/my-KEY.key"
+            #ssl-key-password         = "my-password"
         }
 
 }
